--- a/src/app/inventory/customer-info/customer-info.component.html
+++ b/src/app/inventory/customer-info/customer-info.component.html
@@ -16,7 +16,7 @@
         matSortActive="customerName" class="table table-bordered table-hover grid-height">
         <ng-container matColumnDef="customerName">
             <th class="table-column-200" mat-header-cell *matHeaderCellDef> {{'NAME' | translate}} </th>
-            <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.name}} </td>
+            <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.name}} {{row?.lastName}} </td>
         </ng-container>
         <ng-container matColumnDef="noofinteractions">
             <th class="table-column-200" mat-header-cell *matHeaderCellDef> No. of Interactions
