--- a/src/app/inventory/interaction-detail-view-dialog/interaction-detail-view-dialog.component.html
+++ b/src/app/inventory/interaction-detail-view-dialog/interaction-detail-view-dialog.component.html
@@ -1,6 +1,7 @@
 <mat-dialog-content>
   
-  <div class="dialogdiv text-center">Interaction number is :{{data?.transactionNumber}}</div>
+  <div class="dialogdiv text-center my-3">
+    <span class="header-Text">Interaction ID:{{data?.transactionNumber}}</span></div>
 
 <div class="row">
   <div class="col-md-12">
