--- a/src/app/inventory/my-interactions-list/my-interactions-list.component.html
+++ b/src/app/inventory/my-interactions-list/my-interactions-list.component.html
@@ -25,7 +25,11 @@
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label for="search">Interaction ID</mat-label>
-                <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search">
+                <div class="input-container">
+                    <span class="input-prefix">{{prefix}}</span>
+                    <input type="text" [(ngModel)]="search" class="form-control searchPrefix" id="search">
+                </div>
+                <!-- <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search"> -->
             </div>
         </div>
         <div class="col-md-2">
@@ -33,7 +37,12 @@
                 <mat-label>Type </mat-label>
                 <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
                     placeholder="Select type" class="form-control">
-                    <mat-option [value]="type?.id" *ngFor="let type of typeList">{{type?.name}}</mat-option>
+                   
+                    <ng-container *ngFor="let type of typeList">
+                        <mat-option *ngIf="type.name !='Email' " [value]="type?.id" >{{type?.name}}</mat-option>
+                    </ng-container>
+                   
+                    <!-- <mat-option [value]="type?.id" *ngFor="let type of typeList">{{type?.name}}</mat-option> -->
                 </mat-select>
             </div>
         </div>
