--- a/src/app/inventory/add-interactions/add-interactions.component.html
+++ b/src/app/inventory/add-interactions/add-interactions.component.html
@@ -23,9 +23,11 @@
                 <mat-select [disabled]="contactSelectedType == 'FCR' || contactSelectedType == 'Ticket Created'"
                     (selectionChange)="onticketTypeChange($event)" [dir]="langDir" formControlName="ticketType"
                     placeholder="Please select ticket type" class="form-control">
-                    <mat-option *ngFor="let cat of ticketTypeList" [value]="cat.id">
-                        {{cat.name}}
-                    </mat-option>
+                    <ng-container *ngFor="let cat of ticketTypeList">
+                        <mat-option *ngIf="cat.name !='Email' " [value]="cat.id">
+                            {{cat.name}}
+                        </mat-option>
+                    </ng-container>
                 </mat-select>
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('ticketType').touched && addInventoryForm.get('ticketType').errors?.required"
@@ -93,13 +95,15 @@
                 <mat-select [disabled]="contactSelectedType == 'FCR'" (selectionChange)="onCatChange($event)"
                     [dir]="langDir" formControlName="categoryId" placeholder="Select Category" class="form-control">
                     <ng-container>
-                        <input type="text" class="form-control sticky-input"  formControlName="catInput"
+                        <input type="text" class="form-control sticky-input" formControlName="catInput"
                             placeholder="Search Category" autocomplete="off" />
-                            <mat-option *ngFor="let subCat of categoryList | searchFilter : 'name':addInventoryForm.value.catInput" [value]="subCat.id">
-                                {{subCat.name}}
-                            </mat-option>
+                        <mat-option
+                            *ngFor="let subCat of categoryList | searchFilter : 'name':addInventoryForm.value.catInput"
+                            [value]="subCat.id">
+                            {{subCat.name}}
+                        </mat-option>
                     </ng-container>
-                    
+
                 </mat-select>
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('categoryId').touched && addInventoryForm.get('categoryId').errors?.required"
@@ -114,13 +118,15 @@
                 <mat-label>Sub Category</mat-label>
                 <mat-select [disabled]="contactSelectedType == 'FCR'" [dir]="langDir" formControlName="subcategoryId"
                     placeholder="Select Sub Category" class="form-control">
-                    
+
                     <ng-container>
-                        <input type="text" class="form-control sticky-input"  formControlName="subCatInput"
+                        <input type="text" class="form-control sticky-input" formControlName="subCatInput"
                             placeholder="Search Category" autocomplete="off" />
-                            <mat-option *ngFor="let subCat of subCategoryList | searchFilter : 'name':addInventoryForm.value.subCatInput" [value]="subCat.id">
-                                {{subCat.name}}
-                            </mat-option>
+                        <mat-option
+                            *ngFor="let subCat of subCategoryList | searchFilter : 'name':addInventoryForm.value.subCatInput"
+                            [value]="subCat.id">
+                            {{subCat.name}}
+                        </mat-option>
                     </ng-container>
                 </mat-select>
                 <mat-error [dir]="langDir"
@@ -134,7 +140,7 @@
             <div class="form-group">
                 <mat-label>GSTIN/ARN/TRN/UN</mat-label>
                 <input type="text" maxlength="15" minlength="10" class="form-control"
-                    placeholder="Please enter GSTIN/ARN/TRN/UN" id="gstn" formControlName="gstn">
+                     id="gstn" formControlName="gstn">
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('gstn').touched && addInventoryForm.get('gstn').errors?.required"
                     class="text-danger">
@@ -168,7 +174,7 @@
             </div>
         </div>
 
-        
+
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Source</mat-label>
@@ -188,7 +194,7 @@
         <div class="col-md-8">
             <div class="form-group">
                 <mat-label>Subject</mat-label>
-               <input type="text" [readonly]="true" class="form-control" formControlName="subject" >
+                <input type="text" [readonly]="true" class="form-control"[value]="interactionSubject">
             </div>
         </div>
         <div class="col-md-4">
@@ -202,12 +208,11 @@
                 </button>
             </div>
         </div>
-        
+
         <div class="col-md-12">
             <div class="form-group">
-                <mat-label>Problem Reported </mat-label>
-                <textarea maxlength="2000" 
-                    formControlName="problemReported" class="form-control"></textarea>
+                <mat-label>Problem Reported <span class="text-danger">*</span> </mat-label>
+                <textarea maxlength="2000" formControlName="problemReported" class="form-control"></textarea>
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('problemReported').touched && addInventoryForm.get('problemReported').errors?.required"
                     class="text-danger">
@@ -218,17 +223,14 @@
         <div class="col-md-12">
             <div class="form-group">
                 <mat-label>Agent Remarks</mat-label>
-                <textarea maxlength="2000"  type="text" maxlength="600"  class="form-control" placeholder="Please enter agent remarks" formControlName="agentRemarks" ></textarea>
+                <textarea maxlength="2000" type="text" class="form-control"
+                    formControlName="agentRemarks"></textarea>
                 <mat-error [dir]="langDir"
                     *ngIf="addInventoryForm.get('agentRemarks').touched && addInventoryForm.get('agentRemarks').errors?.required"
                     class="text-danger">
                     Please enter agent remarks.
                 </mat-error>
-                <mat-error [dir]="langDir"
-                    *ngIf="addInventoryForm.get('agentRemarks').touched && addInventoryForm.get('agentRemarks').errors?.minlength"
-                    class="text-danger">
-                    Please enter remarks more then 10 words.
-                </mat-error>
+                
             </div>
         </div>
     </div>
