--- a/src/app/inventory/add-note-dialog/add-note-dialog.component.html
+++ b/src/app/inventory/add-note-dialog/add-note-dialog.component.html
@@ -2,7 +2,7 @@
         <div class="row align-items-center justify-content-between">
             <div class="col-md-auto col-sm-auto">
                 <div class="content-header">
-                    <h1>Notes </h1>
+                    <h1 mat-dialog-title>Comments </h1>
                 </div>
             </div>
         </div>
@@ -16,23 +16,20 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label class="font-weight-bold">
-                        Note
+                     Comment
                     </label>
-                    <angular-editor formControlName="body" minLength="100" maxLength="1200"
+                    <angular-editor formControlName="body"  maxLength="1200"
                         [config]="editorConfig"></angular-editor>
                     <div *ngIf="notesForm.get('body').touched && notesForm.get('body').errors">
                         <div class="text-danger" *ngIf="notesForm.get('body').errors?.required">
-                            Note is required
-                        </div>
-                        <div class="text-danger" *ngIf="notesForm.get('body').errors?.minlength">
-                            Please enter note more then 10 words
+                            Comment is required
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="form-group">
-                    <label class="text-danger">Next Status Time *</label>
+                    <mat-label>Next Status Time *</mat-label>
                     <input class="form-control" (click)="nextStatusTime.open()" [readonly]="true" [min]="currentDate" id="nextStatusTime" formControlName="nextStatusTime"
                         [owlDateTimeTrigger]="nextStatusTime" [owlDateTime]="nextStatusTime" placeholder="{{'DATE' | translate}}">
                     <div *ngIf="notesForm.get('nextStatusTime').touched && notesForm.get('nextStatusTime').errors">
@@ -49,7 +46,7 @@
 <mat-dialog-actions>
     <div *hasClaim="'INT_ADD_INTERACTION'" class="col-md-auto col-sm-auto col-auto">
         <button [disabled]="isLoading" class="btn btn-success btn-sm m-right-10" (click)="addNote()">
-            <i class="fas fa-plus"></i> Add Note
+            <i class="fas fa-plus"></i> Add Comment
         </button>
         <button type="button" class="btn btn-danger btn-sm" (click)="dialogRef.close(false)"><i
             class="fas fa-times-circle"></i>
