--- a/src/app/inventory/interaction-notes/interaction-notes.component.html
+++ b/src/app/inventory/interaction-notes/interaction-notes.component.html
@@ -6,8 +6,9 @@
             </div>
         </div>
         <div *hasClaim="'INT_ADD_INTERACTION'" class="col-md-auto col-sm-auto col-auto">
-            <button class="btn blue-btn btn-sm m-right-10" (click)="addNote()">
-                <i class="fas fa-plus"></i> Add Note
+            <button *ngIf="InteractionDetail?.ticketType =='Ticket Created' || InteractionDetail?.ticketType == 2 "
+                class="btn blue-btn btn-sm m-right-10" (click)="addNote()">
+                <i class="fas fa-plus"></i> Add Comment
             </button>
         </div>
     </div>
@@ -20,25 +21,37 @@
         <div class="col-md-12">
             <div class="form-group">
                 <label class="font-weight-bold">
-                    Note
+                    Comment
                 </label>
-                <angular-editor formControlName="body" minLength="10" maxLength="12"
-                    [config]="editorConfig"></angular-editor>
+                <angular-editor formControlName="body" [config]="editorConfig"></angular-editor>
                 <div *ngIf="notesForm.get('body').touched && notesForm.get('body').errors">
                     <div class="text-danger" *ngIf="notesForm.get('body').errors?.required">
-                        Note is required
+                        Comment is required
                     </div>
                 </div>
             </div>
         </div>
+        <div class="col-md-12">
+            <div class="form-group w-50">
+                <label class="text-danger">Next Status Time *</label>
+                <input class="form-control" (click)="nextStatusTime.open()" [readonly]="true" [min]="currentDate"
+                    id="nextStatusTime" formControlName="nextStatusTime" [owlDateTimeTrigger]="nextStatusTime"
+                    [owlDateTime]="nextStatusTime" placeholder="{{'DATE' | translate}}">
+                <div *ngIf="notesForm.get('nextStatusTime').touched && notesForm.get('nextStatusTime').errors">
+                    <div class="text-danger" *ngIf="notesForm.get('nextStatusTime').errors?.required">
+                        Next Status Time is required
+                    </div>
+                </div>
+                <owl-date-time #nextStatusTime></owl-date-time>
+            </div>
+        </div>
     </div>
 </form>
-
 <div class="page-header-main headerBackground">
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto">
             <div class="content-header">
-                <h1>Recent Notes </h1>
+                <h1>Recent Comments </h1>
             </div>
         </div>
     </div>
@@ -46,14 +59,49 @@
 <div class="row">
     <div class="NotesDiv">
         <div class="" *ngIf="notesList.length">
-            <div class="" *ngFor="let list of notesList">
-                <p><span>On{{list?.date | date:'full'}}</span>by{{list?.by}}</p>
-                <span>{{list?.note}}</span>
-            </div>
+            <div class="table-responsive">
+                <table [dir]="langDir" mat-table [dataSource]="notesList" multiTemplateDataRows
+                    class="table table-bordered table-hover grid-height">
+                    <ng-container matColumnDef="name">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef> Created By</th>
+                        <td class="table-column-200" mat-cell *matCellDef="let element"> {{element.createdByName}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="date">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef>Created Date </th>
+                        <td class="table-column-200" mat-cell *matCellDef="let element"> {{element.createdDate|
+                            date:'dd-MM-yyyy hh:mm a' }} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="nextStatusTime">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef>Next Status Time </th>
+                        <td class="table-column-200" mat-cell *matCellDef="let element"> {{element.nextStatusTime |
+                            date:'dd-MM-yyyy hh:mm a'}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="noteDesc">
+                        <th class="table-column-500" mat-header-cell *matHeaderCellDef> Description</th>
+                        <td class="table-column-500" mat-cell *matCellDef="let element">
+                            <div class="Desc">{{element.noteDesc}} </div>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="teamName">
+                        <th class="table-column-150" mat-header-cell *matHeaderCellDef> Team</th>
+                        <td class="table-column-150" mat-cell *matCellDef="let element"> {{element.teamName}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="transactionNo">
+                        <th class="table-column-200" mat-header-cell *matHeaderCellDef> Intercation Number</th>
+                        <td class="table-column-200" mat-cell *matCellDef="let element"> {{element.intercationNumber}}
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="id">
+                        <th class="table-column-100" mat-header-cell *matHeaderCellDef> ID</th>
+                        <td class="table-column-100" mat-cell *matCellDef="let element"> {{element.id}} </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky: true"></tr>
+                    <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+                </table>
 
+            </div>
         </div>
         <div class="noNotes" *ngIf="!notesList.length && !isLoading">
-            <span>No note found</span>
+            <span>No comment found</span>
         </div>
     </div>
-</div>
