--- a/src/app/inventory/team-interactions-list/team-interactions-list.component.html
+++ b/src/app/inventory/team-interactions-list/team-interactions-list.component.html
@@ -25,7 +25,11 @@
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label for="search">Interaction ID</mat-label>
-                <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search">
+                <div class="input-container">
+                    <span class="input-prefix">{{prefix}}</span>
+                    <input type="text" [(ngModel)]="search" class="form-control searchPrefix" id="search">
+                </div>
+                <!-- <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search"> -->
             </div>
         </div>
         <div class="col-md-2">
@@ -33,7 +37,10 @@
                 <mat-label>Type </mat-label>
                 <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
                     placeholder="Select type" class="form-control">
-                    <mat-option [value]="type?.id" *ngFor="let type of typeList">{{type?.name}}</mat-option>
+                    <ng-container *ngFor="let type of typeList">
+                        <mat-option *ngIf="type.name !='Email' " [value]="type?.id">{{type?.name}}</mat-option>
+                    </ng-container>
+                    <!-- <mat-option [value]="type?.id" *ngFor="let type of typeList">{{type?.name}}</mat-option> -->
                 </mat-select>
             </div>
         </div>
@@ -59,33 +66,36 @@
             <div class="form-group">
                 <mat-label> Category </mat-label>
                 <mat-select [disabled]="!selectedType" [(ngModel)]="selectedCategory"
-                    (selectionChange)="onCatChange($event);catInput=''" placeholder="Select category" class="form-control">
-                   
+                    (selectionChange)="onCatChange($event);catInput=''" placeholder="Select category"
+                    class="form-control">
+
                     <ng-container>
                         <input type="text" class="form-control sticky-input" [(ngModel)]="catInput"
                             placeholder="Search Category" autocomplete="off" />
-                            <mat-option [value]="cat?.id" *ngFor="let cat of categoryList | searchFilter : 'name':catInput">{{cat?.name}}</mat-option>
+                        <mat-option [value]="cat?.id"
+                            *ngFor="let cat of categoryList | searchFilter : 'name':catInput">{{cat?.name}}</mat-option>
                     </ng-container>
-                   
-                    
+
+
                 </mat-select>
             </div>
         </div>
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label> Sub Category </mat-label>
-                <mat-select (selectionChange)="subCatInput=''" [disabled]="!selectedCategory" [(ngModel)]="selectedSubCategory" placeholder="Select type"
-                    class="form-control">
+                <mat-select (selectionChange)="subCatInput=''" [disabled]="!selectedCategory"
+                    [(ngModel)]="selectedSubCategory" placeholder="Select type" class="form-control">
                     <ng-container>
                         <input type="text" class="form-control sticky-input" [(ngModel)]="subCatInput"
                             placeholder="Search Category" autocomplete="off" />
-                            <mat-option [value]="cat?.id" *ngFor="let cat of subCategoryList | searchFilter : 'name':subCatInput">{{cat?.name}}</mat-option>
+                        <mat-option [value]="cat?.id"
+                            *ngFor="let cat of subCategoryList | searchFilter : 'name':subCatInput">{{cat?.name}}</mat-option>
                     </ng-container>
-                   
+
                 </mat-select>
             </div>
         </div>
-       
+
         <!-- <div class="col-md-2">
             <div class="form-group">
                 <mat-label> Team </mat-label>
@@ -110,9 +120,9 @@
             <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
                     class="fas fa-times-circle"></i>
                 Clear </button>
-                <button type="button" class="btn btn-warning btn-md button-margin ml-2"><i
-                    class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
-                </button>
+            <button type="button" class="btn btn-warning btn-md button-margin ml-2"><i class="fas fa-download"></i>
+                {{'DOWNLOAD_REPORT' | translate}}
+            </button>
         </div>
     </div>
 </div>
@@ -133,7 +143,7 @@
                 <th class="table-column-100" mat-header-cell *matHeaderCellDef> Action
                 </th>
                 <td class="table-column-100" mat-cell *matCellDef="let element">
-                    
+
                     <mat-icon class="interButtonIcons" *hasClaim="'INT_UPDATE_INTERACTION'"
                         routerLink="/interactions/edit-interactions/{{element?.id}}">edit</mat-icon>
                     <mat-icon class="interButtonIcons" *hasClaim="'INT_DELETE_INTERACTION'"
@@ -144,12 +154,14 @@
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction ID</th>
                 <!-- <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.transactionNumber}} </td> -->
                 <!-- <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.transactionNumber}} </td> -->
-                <td class="table-column-200" mat-cell *matCellDef="let row"><a  routerLink="/interactions/edit-interactions/{{row?.id}}">{{row.transactionNumber}}</a> </td>
+                <td class="table-column-200" mat-cell *matCellDef="let row"><a
+                        routerLink="/interactions/edit-interactions/{{row?.id}}">{{row.transactionNumber}}</a> </td>
                 <!-- <td class="table-column-200" mat-cell *matCellDef="let row"> {{row }} </td> -->
             </ng-container>
             <ng-container matColumnDef="interactiontype">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Type</th>
-                <td class="table-column-200" [ngClass]="row?.ticketType=='FCR'?'fcr':'ticket-closed'" mat-cell *matCellDef="let row"> {{row.ticketType}} </td>
+                <td class="table-column-200" [ngClass]="row?.ticketType=='FCR'?'fcr':'ticket-closed'" mat-cell
+                    *matCellDef="let row"> {{row.ticketType}} </td>
             </ng-container>
             <ng-container matColumnDef="assignto">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Assign To</th>
@@ -168,7 +180,9 @@
                 <th class="table-column-150" mat-header-cell *matHeaderCellDef mat-sort-header>
                     Status
                 </th>
-                <td class="table-column-150" [ngClass]="row?.statusName=='CLOSED'?'closed':(row?.statusName=='OPEN'||row?.statusName=='Open'?'open':row?.statusName=='PENDING'?'pending':'resolved')" mat-cell *matCellDef="let row"> <span class="text-uppercase">{{row?.statusName}}</span></td>
+                <td class="table-column-150"
+                    [ngClass]="row?.statusName=='CLOSED'?'closed':(row?.statusName=='OPEN'||row?.statusName=='Open'?'open':row?.statusName=='PENDING'?'pending':'resolved')"
+                    mat-cell *matCellDef="let row"> <span class="text-uppercase">{{row?.statusName}}</span></td>
             </ng-container>
             <ng-container matColumnDef="substatus">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Sub Status
@@ -253,4 +267,3 @@
         </table>
     </div>
 </div>
-
